--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .idea
-.env
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -8,4 +7,5 @@
 /public/bundles/
 /var/
 /vendor/
+/migrations/
 ###< symfony/framework-bundle ###
